--- a/day1/awesome_answers/Gemfile
+++ b/day1/awesome_answers/Gemfile
@@ -1,5 +1,13 @@
 source 'https://rubygems.org'
 
+# When we add or update a gem in this file, bundler updates
+# the Gemfil.lock, which locks the version to the one installed the first time, so if
+# another developer takes on the projct and run 'bundle',
+# he/she will get the same version
+#
+# we run 'bundle' or 'bundle install' if we add/remove gems 
+# which will update the Gemfile.lock file
+# gem 'cowsay', '0.1.0'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.3'
@@ -22,7 +30,10 @@ gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
-
+# gem cowsay # this would use local cowsay, or latest
+gem "cowsay", '0.1.0'
+# gem "cowsay", '0.1.0', group: :development # This sets it up for development only
+#
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
